--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
     <!-- start Gallery -->
     <section class="gallery">
       <div class="container">
-        <img src="/imgs/01.jpg" alt="img" />
-        <img src="/imgs/02.jpg" alt="img" />
-        <img src="/imgs/03.jpg" alt="img" />
-        <img src="/imgs/04.jpg" alt="img" />
-        <img src="/imgs/05.jpg" alt="img" />
-        <img src="/imgs/06.png" alt="img" />
-        <img src="/imgs/07.jpg" alt="img" />
-        <img src="/imgs/08.jpg" alt="img" />
+        <img src="imgs/01.jpg" alt="img" />
+        <img src="imgs/02.jpg" alt="img" />
+        <img src="imgs/03.jpg" alt="img" />
+        <img src="imgs/04.jpg" alt="img" />
+        <img src="imgs/05.jpg" alt="img" />
+        <img src="imgs/06.png" alt="img" />
+        <img src="imgs/07.jpg" alt="img" />
+        <img src="imgs/08.jpg" alt="img" />
       </div>
     </section>
     <!-- End Gallery -->
